# saas202510

./: .coverage.DESKTOP-RVC20QJ.11376.XmWdORnx  .coverage.DESKTOP-RVC20QJ.1416.XankPumx  .coverage.DESKTOP-RVC20QJ.2804.XTTzRpax  .coverage.DESKTOP-RVC20QJ.5884.XQxiPogx  .coveragerc  .env.example  .gitignore  .project-state.json  CLAUDE.md  QA_COMPLETION_REPORT.md  README.md  SESSION_PROGRESS_REPORT.md  SPRINT-01-PROGRESS.md  SPRINT-02-COMPLETE.md  SPRINT-02-PROGRESS.md  SPRINT-03-COMPLETE.md  SPRINT-04-COMPLETE.md  SPRINT-05-COMPLETE.md  SPRINT-05-PROGRESS.md  SPRINT-06-COMPLETE.md  SPRINT-06-PROGRESS.md  SPRINT-07-COMPLETE.md  SPRINT-07-PROGRESS.md  _START-HERE.md  docker-compose.yml  project-brief.md  pyproject.toml  pytest-benchmark.ini  test_generators.py
.claude/: settings.local.json
.config/: INTEGRATIONS.md  SAFE-PROCESS-MANAGEMENT.md  linear-integration-guide.md
.github/workflows/: README.md  test.yml
docs/: CI-CD-DEBUGGING-JOURNEY.md  CI-CD-IMPLEMENTATION.md  CODE-COVERAGE-AND-BENCHMARKING.md  COMPLETE-QA-INFRASTRUCTURE-SUMMARY.md  PHASE4_TEST_COMPLETION.md  POSTGRESQL-TEST-DATABASE-SETUP.md  SESSION-PROGRESS-2025-10-29.md  SESSION-PROGRESS-2025-11-01.md  SESSION_PROGRESS_REPORT_2025_11_01.md  SPRINTS-14-20-TEST-COMPLETION-SUMMARY.md  TEMPLATES-INVENTORY.md  TEST-COMPLETION-SUMMARY.md
docs/advanced/: SPECIALIZED-TOOLS.md
product/roadmap/: 2025-Q4-roadmap.md
sprints/current/: sprint-01-test-data-foundation.md  sprint-02-transaction-flows.md  sprint-03-edge-cases-performance.md  sprint-04-integrations-isolation.md  sprint-05-data-validation-pit.md  sprint-06-compliance-audit.md  sprint-07-advanced-testing.md
src/: README.md  __init__.py
src/qa_testing/: __init__.py  ui_testing.py
tests/: __init__.py  conftest.py  strategies.py  test_bank_reconciliation.py  test_data_types.py  test_performance.py  test_point_in_time_reconstruction.py  test_sprint_17_delinquency.py  test_sprint_18_matching.py  test_sprint_19_20_violations_packets.py  test_validators.py
tests/api/: test_board_packets_api.py  test_collections_api.py  test_matching_api.py  test_violations_api.py
tests/compliance/: __init__.py  test_accuracy_validator.py  test_audit_trail.py  test_immutability.py  test_policy_engine.py  test_report_generator.py
tests/events/: __init__.py  test_event_store.py
tests/integration/: __init__.py  conftest.py  test_advanced_reporting.py  test_ar_collections.py  test_auditor_export.py  test_auto_matching.py  test_bank_reconciliation.py  test_board_packet_generation.py  test_budget_management.py  test_dashboard_metrics.py  test_delinquency_collections.py  test_funds_management.py  test_import_fixes_deployment.py  test_payment_flows.py  test_pdf_generation.py  (+6 more)
(+82 files in other folders)
